# tq

./: Cargo.toml  README.md  compose.yml  rustfmt.toml
.devcontainer/: devcontainer.json
src/: lib.rs  producer.rs
src/consumer/: build.rs  message.rs  mod.rs  traits.rs
src/redis/: consumer.rs  data.rs  mod.rs  producer.rs
tests/: integration_test.rs
