[package]
name = "tq"
version = "0.1.0"
edition = "2021"

resolver = "2"

[lints.rust]
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
all = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
unimplemented = "warn"
todo = "warn"
exhaustive_enums = "warn"
impl_trait_in_params = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
correctness = "deny"
missing_errors_doc = "allow"
module_name_repetitions = "allow"

[dependencies]
async-trait = "0.1.74"
eyre = "0.6.9"
futures = { version = "0.3.29", default-features = false, features = [
    "alloc",
    "std",
    "async-await",
] }
pin-project-lite = "0.2.13"
redis = { version = "0.23.3", optional = true, features = [
    "aio",
    "tokio-comp",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["macros"] }
tower = { version = "0.4.13", features = ["make"] }
tracing = { version = "0.1.40", features = ["async-await"] }

[dev-dependencies]
rand = "0.8.5"
tower = { version = "0.4.13", features = ["make", "util"] }

[features]
default = ["redis", "consumer", "producer"]
consumer = []
producer = []
